--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <receiver
             android:name=".TimerExpiredReceiver"
             android:enabled="true"
+            android:exported="true" />
+        <receiver
+            android:name=".TimerNotificationActionReceiver"
+            android:enabled="true"
             android:exported="true"></receiver>
     </application>
 
